--- a/settings.ini
+++ b/settings.ini
@@ -16,7 +16,7 @@ maxFreq = 1500000000
 # Delay between sending the scan command to the VNA and reading the results
 readDelay = .2
 
-# Max errors before BleepVNA gives up and quits
+# Max errors before BeepVNA gives up and quits
 maxConsecutiveErrors = 5
 
 
