--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ jobs:
       language: python
     - name: "Python 3.7.4 on macOS"
       os: osx
-      osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
-      language: shell       # 'language: python' is an error on Travis CI macOS
-    - name: "Python 3.8.0 on Windows"
+      language: generic
+      env: TOXENV=py38
+    - name: "Python 3.9.0 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
       before_install:
-        - choco install python --version 3.8.0
+        - choco install python --version 3.9.0
         - python -m pip install --upgrade pip
-      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+      env: PATH=/c/Python39:/c/Python39/Scripts:$PATH
 
 
 # command to install dependencies
