--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jobs:
       language: python
     - name: "Python 3.7.4 on macOS"
       os: osx
-      language: generic
+      language: shell
       env: TOXENV=py38
     - name: "Python 3.9.0 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
@@ -21,7 +21,7 @@ jobs:
 
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
 # command to run tests
 script:
-  - python BeepVna.py -n testing || python3 BeepVna.py -n testing
+  - python3 BeepVna.py -n testing
