--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ jobs:
   include:
     - name: "Python 3.9.0 on Xenial Linux"
       python: 3.9 # this works for Linux but is ignored on macOS or Windows
-    - name: "Python 3.6.10 on FreeBSD"
+    - name: "Python 3.9.0 on FreeBSD"
       os: freebsd
-      language: python
-    - name: "Python 3.7.4 on macOS"
+      python: 3.9
+    - name: "Python 3.9.0 on macOS"
       os: osx
       language: shell
-      env: TOXENV=py38
+      env: TOXENV=py39
     - name: "Python 3.9.0 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
@@ -21,7 +21,7 @@ jobs:
 
 # command to install dependencies
 install:
-  - pip3 install -r requirements.txt
+  - pip3 install -r requirements.txt || pip3 install -r requirements.txt
 # command to run tests
 script:
-  - python3 BeepVna.py -n testing
+  - python3 BeepVna.py -n testing || python BeepVna.py -n testing
